--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ python = "^3.10"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 pandas = "^2.1.0"
-NUMPY = "1.26.3"
+numpy = ">=1.26.0"
 pydantic = "^2.3.0"
 tls-client = "^1.0.1"
 markdownify = "^1.1.0"
